<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voice_Recog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <string name="title_activity_settings">Settings</string>
    <string name="Saved">Data Saved !</string>
    <string name="title_activity_about">About</string>

    <!-- Instructions -->
    <string name="ins1">If you are opening the app for the first time, you should have a look at settings first.</string>
    <string name="ins2">Local Emergency Number : Set whatever is appropriate in your area. etc 911 in USA, 100 for most countries.</string>
    <string name="ins3">Set Emergency Contacts : Pick two contacts who can get to you in minimal time. They will get SMS with your location when you need help.</string>
    <string name="ins4">SMS Content : Set Text content which will be sent to emergency contacts.</string>
    <string name="ins5">Help Word : Set your custom help word. Its \'help\' by default.</string>
    <string name="ins6">CheckBoxes : You can select whether to send SMS, Record Audio, or Send location with SMS. These Settings were put there for debug purposes. We suggest you keep them all checked.</string>
    <string name="ins7">Service Start/Stop : A Service always listens to your voice. Even when the screen is locked. You can turn it off when you KNOW you are safe and DON\'T NEED HELP.</string>
    <string name="ins8">NEVER FORGET to press \'save\' button after you change anything in settings.</string>

    <!-- About -->
    <string name="about1">This application was developed by BCA students</string>
    <string name="name1">Siddharth Bhatt</string>
    <string name="name2">Hussain Kadanawala</string>
    <string name="about2">As Android Programming subject assignment at</string>
    <string name="college">Symbiosis Institute of Computer Studies and Research</string>
    <string name="uni">Symbiosis International University, Pune, India</string>
    <string name="title_activity_instructions">Instructions</string>



</resources>
