<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.siddharthbhatt.voice_recog.About"

    android:id="@+id/scrollView"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="0dp"
    android:layout_margin="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear1"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:baselineAligned="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about1"
            android:id="@+id/textView7"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name1"
            android:id="@+id/nameSid"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="and"
            android:id="@+id/textView13"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name2"
            android:id="@+id/nameHussain"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about2"
            android:id="@+id/textView8"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/college"
            android:id="@+id/nameCollege"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="A Constituent of"
            android:id="@+id/textView9"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/uni"
            android:id="@+id/nameUni"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
